# thotkeeper

./: .flake8  .gitignore  BRANCH-README  CHANGES  CHANGES.md  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  README.md  catalog-info.yaml  latest-version.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-data.xml  thotkeeper
.github/workflows/: pythonapp.yml
branches/attachments/: BRANCH-README
branches/attachments/lib/: tk_data.py
branches/templates/: CHANGES
branches/templates-feature/lib/: tk_data.py  tk_main.py  tk_resources.xrc
branches/templates/lib/: tk_data.py  tk_main.py  tk_resources.xrc
branches/templates/tools/: make-release
icons/: thotkeeper.xpm
lib/: tk_data.py  tk_main.py  tk_resources.xrc
notes/: RELEASE-HOWTO.md  thotkeeper-logo-bubbles.odg  thotkeeper-logo.odg  thotkeeper.desktop
src/thotkeeper/: __init__.py  __main__.py  app.py  parser.py  utils.py  version.py
tags/0.1.0/lib/: tk_main.py
tags/0.1.0/tools/: make-release
tags/0.2.0/lib/: tk_main.py
tags/0.2.0/tools/: make-release
tags/0.3.0/: CHANGES
tags/0.3.0/lib/: tk_data.py  tk_main.py
tags/0.4.0/: INSTALL
tags/0.4.0/lib/: tk_main.py
thotkeeper/: __init__.py  __main__.py  app.py  entries.py  parser.py  resources.xrc  utils.py  version.py
tools/: bump-copyright-years  make-release
trunk/: CHANGES  LICENSE
trunk/lib/: tk_data.py  tk_main.py  tk_resources.xrc
trunk/tools/: make-release
wiki/: Downloads.wiki  ThotKeeper.wiki
www/: Downloads.md  index.html  latest-version.json  latest-version.txt  styles.css
